--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,9 @@
             "Database\\Seeders\\": "database/seeders/"
         },
          "files": [
-            "app/helpers/helperQuoteStatus.php"
+            "app/helpers/helperQuoteStatus.php",
+            "app/helpers/helperPaymentStatus.php",
+            "app/helpers/helperOrderStatus.php"
         ]
     },
     "autoload-dev": {
