--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,7 @@ VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
 VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
 VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+PASSWORD_POCKET_MONEY = "51685168"
+SLIP2GO_SECRET_KEY = "SUfhC+DkZgQTBIE9FWH7h6AKJxztMy+ZHZgCiBwTh44="
