--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
             "app/helpers/helperQuoteStatus.php",
             "app/helpers/helperPaymentStatus.php",
             "app/helpers/helperOrderStatus.php",
-            "app/helpers/helperDeliveryStatus.php"
+            "app/helpers/helperDeliveryStatus.php",
+            "app/helpers/helperTruckWeight.php"
         ]
     },
     "autoload-dev": {
